# loudeq

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  tray.rs
store/: AppxManifest.xml  listing.md
