[package]
name = "loudeq"
version = "0.1.0"
edition = "2021"
description = "Toggle Windows Loudness Equalization for playback devices from the command line or a tray icon"
license = "MIT"
repository = "https://github.com/ardenden/loudeq"

[[bin]]
name = "loudeq"
path = "src/main.rs"

[[bin]]
name = "loudeq-tray"
path = "src/tray.rs"

[dependencies]
winreg = "0.55"

# Pinned to 0.52: later versions link Win32 APIs via raw-dylib, which needs a
# full binutils (dlltool + as) on the windows-gnu toolchain.
[dependencies.windows]
version = "0.52"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = true
lto = true
